--- a/package.json
+++ b/package.json
@@ -2,24 +2,17 @@
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon --watch src -e js,ts,json --exec \"ts-node src/index.ts\"",
-    "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "pm2": "pm2 start run-ts.sh --name discordBot"
+    "dev": "nodemon --watch src src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "discord.js": "^14.13.0",
-    "sheweny": "^4.2.1",
+    "discord.js": "^14.15.2",
+    "dotenv": "^16.3.1",
     "mongoose": "^7.5.2",
-    "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.18",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.9.5"
+    "nodemon": "^3.1.1",
+    "sheweny": "^4.2.1"
   },
   "keywords": [],
   "author": "",
